--- a/ansible/inventory/my-cluster/group_vars/all.yml
+++ b/ansible/inventory/my-cluster/group_vars/all.yml
@@ -1,7 +1,7 @@
 ---
 k3s_version: v1.23.9+k3s1
 # this is the user that has ssh access to these machines
-ansible_user: ansibleuser
+ansible_user: louis
 systemd_dir: /etc/systemd/system
 
 # Set your environment
@@ -9,13 +9,13 @@ deployment_environment: staging
 #deployment_environment: production #Todo: commit on staging
 
 # Set your timezone
-system_timezone: "Your/TimeZone"
+system_timezone: "Europe/Paris"
 
 # interface which will be used for flannel
 flannel_iface: "eth0"
 
 # apiserver_endpoint is virtual ip-address which will be configured on each master
-apiserver_endpoint: "192.168.x.x"
+apiserver_endpoint: "192.168.0.220"
 
 # k3s_token is required  masters can talk together securely
 # this token should be alpha numeric only
@@ -64,10 +64,10 @@ metal_lb_speaker_tag_version: "v0.13.9"
 metal_lb_controller_tag_version: "v0.13.9"
 
 # metallb ip range for load balancer
-metal_lb_ip_range: "192.168.x.x-192.168.x.x"
+metal_lb_ip_range: "192.168.0.221-192.168.0.250"
 
 # first ip from metallb range for internal traefik
-traefik_endpoint_ip: "192.168.x.x"
+traefik_endpoint_ip: "192.168.0.222"
 traefik_dash_dns_name: "TraefikHostname"
 
 # traefik dashboard user
@@ -91,7 +91,6 @@ longhorn_dns_name: "LongHornDNSName"
 longhorn_dashboard_secret: "LongHornAuthPassword"
 
 argo_cd_dns_name: "ArgoCDDNSName"
-
 # Only enable if your nodes are proxmox LXC nodes, make sure to configure your proxmox nodes
 # in your hosts.ini file.
 # Please read https://gist.github.com/triangletodd/02f595cd4c0dc9aac5f7763ca2264185 before using this.
