argo cd fix names

--- a/ansible/roles/argo_cd/tasks/main.yml
+++ b/ansible/roles/argo_cd/tasks/main.yml
@@ -20,7 +20,7 @@
     port: 6443
     delay: 10
 
-- name: create the argocd namespace for longhorn
+- name: create the argocd namespace for argo-cd
   command:
     cmd: kubectl create namespace argocd
   changed_when: true
